<!--
  ~ Copyright 2023 Fragula contributors.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">Fragula</string>
    <string name="app_compose">Fragula Compose</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="message">Message</string>
    <string name="date">16 August</string>
    <string name="open_profile">Open Profile</string>
    <string name="social_instagram">Instagram</string>
    <string name="social_facebook">Facebook</string>
    <string name="social_telegram">Telegram</string>

    <string name="tab_favorites">Favorites</string>
    <string name="tab_friends">Friends</string>
    <string name="tab_likes">Likes</string>
    <string name="tab_settings">Settings</string>

    <string name="tab_fragment">&lt;fragment&gt;</string>
    <string name="tab_dialog">&lt;dialog&gt;</string>

</resources>
