<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2023 Fragula contributors.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/tab_favorites" />

    <item
        android:id="@+id/friends"
        android:icon="@drawable/ic_friends"
        android:title="@string/tab_friends" />

    <item
        android:id="@+id/likes"
        android:icon="@drawable/ic_likes"
        android:title="@string/tab_likes" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/tab_settings" />

</menu>