<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2023 Fragula contributors.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:layoutDirection="locale">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:id="@+id/profile"
        app:cardCornerRadius="0dp"
        app:cardBackgroundColor="?colorSurface"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="18dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:id="@+id/picture" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:textColor="?colorOnSurface"
                android:textSize="16sp"
                android:text="@string/open_profile"
                app:layout_constraintBottom_toTopOf="@id/message_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/scrollView"
        app:layout_constraintTop_toBottomOf="@id/profile"
        app:layout_constraintBottom_toTopOf="@id/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:padding="16dp"
                android:text="@string/date"
                android:textColor="?colorOnPrimary"
                android:textSize="14sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/message_4"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="6dp"
                app:cardBackgroundColor="?colorSecondaryVariant"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="@string/lorem_ipsum"
                    android:textColor="?colorOnSurface"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:padding="4dp"
                    android:text="12:31"
                    android:textColor="?colorOnSecondary"
                    android:textSize="12sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/message_3"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="6dp"
                app:cardBackgroundColor="?colorSurface"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="@string/lorem_ipsum"
                    android:textColor="?colorOnSurface"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/stock_image"
                    android:layout_width="226dp"
                    android:layout_height="148dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="56dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/image_9" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:padding="4dp"
                    android:text="12:38"
                    android:textColor="?colorOnBackground"
                    android:textSize="12sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/message_2"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="6dp"
                app:cardBackgroundColor="?colorSecondaryVariant"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="@string/lorem_ipsum"
                    android:textColor="?colorOnSurface"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:padding="4dp"
                    android:text="12:45"
                    android:textColor="?colorOnSecondary"
                    android:textSize="12sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/message_1"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="6dp"
                app:cardBackgroundColor="?colorSurface"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="@string/lorem_ipsum"
                    android:textColor="?colorOnSurface"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:padding="4dp"
                    android:text="12:47"
                    android:textColor="?colorOnBackground"
                    android:textSize="12sp" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input"
        app:cardBackgroundColor="?colorSurface"
        app:cardCornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@android:color/transparent"
            android:textColorHint="?colorOnBackground"
            android:hint="@string/message"
            android:id="@+id/message" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:src="@drawable/ic_send"
            android:id="@+id/send"
            app:tint="?colorSecondary" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>